# AfkLib

./: .gitignore  .gitmodules  AssetService_8cpp_source.html  AssetService_8h.html  AssetService_8h__dep__incl.map  AssetService_8h__dep__incl.md5  AssetService_8h__incl.map  AssetService_8h__incl.md5  AssetService_8h_source.html  AudioService_8cpp.html  AudioService_8cpp__incl.map  AudioService_8cpp__incl.md5  AudioService_8cpp_source.html  AudioService_8h.html  AudioService_8h__dep__incl.map  AudioService_8h__dep__incl.md5  AudioService_8h__incl.map  AudioService_8h__incl.md5  AudioService_8h_source.html  Button_8cpp.html  Button_8cpp__incl.map  Button_8cpp__incl.md5  Button_8cpp_source.html  Button_8h.html  Button_8h__dep__incl.map  Button_8h__dep__incl.md5  Button_8h__incl.map  Button_8h__incl.md5  Button_8h_source.html  CMakeLists.txt  CPPLINT.cfg  Checkbox_8cpp.html  Checkbox_8cpp__incl.map  Checkbox_8cpp__incl.md5  Checkbox_8cpp_source.html  Checkbox_8h.html  Checkbox_8h__dep__incl.map  Checkbox_8h__dep__incl.md5  Checkbox_8h__incl.map  Checkbox_8h__incl.md5  (+727 more)
.github/workflows/: build-linux.yml  build-macos.yml  build-web.yml  build-windows.yml  deploy-docs.yml
afk/: CMakeLists.txt
afk/include/assets/: Sound.h  Stream.h  Texture.h
afk/include/common/: Color.h  Exceptions.h  Vec.h  math.h  random.h
afk/include/components/: Particle.h  ParticleEmitter.h  Physics.h  Sprite.h  Transform.h  ui.h
afk/include/components/ui/: Button.h  Label.h
afk/include/entities/: Entity.h
afk/include/scene/: Scene.h
afk/include/services/: Services.h
afk/include/services/assets/: AssetService.h
afk/include/services/audio/: AudioService.h
afk/include/services/config/: ConfigService.h
afk/include/services/display/: DisplayService.h
afk/include/services/events/: EventQueue.h
afk/include/services/input/: InputService.h  JoystickState.h  KeyboardState.h  MouseState.h
afk/include/services/scene/: SceneService.h
afk/include/systems/: ParticleSystem.h  PhysicsSystem.h  RenderSystem.h  UISystem.h
afk/include/ui/: MessageBox.h
afk/src/assets/: Sound.cpp  Stream.cpp  Texture.cpp
afk/src/common/: Color.cpp  str.cpp
afk/src/primitives/: Primitives.cpp
afk/src/scene/: Scene.cpp
afk/src/services/assets/: AssetService.cpp
afk/src/services/config/: ConfigService.cpp
afk/src/services/display/: DisplayService.cpp
afk/src/services/events/: EventQueue.cpp
afk/src/services/input/: InputService.cpp
afk/src/services/logging/: DebugLoggingService.cpp
afk/src/services/scene/: SceneService.cpp
afk/src/systems/: CollisionSystem.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  UISystem.cpp
afk/src/ui/: MessageBox.cpp
examples/: CMakeLists.txt  ex_button.cpp  ex_collision.cpp  ex_collision.html  ex_collision.js  ex_collision.wasm  ex_display.cpp  ex_display.data  ex_display.html  ex_display.js  ex_display.wasm  ex_fps.cpp  ex_fps.html  ex_fps.js  ex_fps.wasm  ex_keyboard.cpp  ex_keyboard.html  ex_keyboard.js  ex_keyboard.wasm  ex_message_box.cpp  ex_message_box.html  ex_message_box.js  ex_message_box.wasm  ex_mouse.cpp  ex_mouse.html  ex_mouse.js  ex_mouse.wasm  ex_particles.cpp  ex_particles.html  ex_particles.js  ex_particles.wasm  ex_physics.cpp  ex_rotate.cpp  ex_rotate.html  ex_rotate.js  ex_rotate.wasm  ex_sound.cpp  ex_sound.html  ex_sound.js  ex_sound.wasm  (+8 more)
examples/ex_screen/: CMakeLists.txt  main.cpp
examples/src/: ex_collision.cpp  ex_display.cpp  ex_fps.cpp  ex_keyboard.cpp  ex_message_box.cpp  ex_mouse.cpp  ex_particles.cpp  ex_physics.cpp  ex_rotate.cpp  ex_sound.cpp  ex_sprite.cpp  ex_ui.cpp
include/: Engine.h  EventQueue.h  Game.h  Locator.h  Service.h
include/assets/: AssetManager.h  Font.h  Sound.h  Stream.h  Texture.h
include/audio/: AudioService.h  DefaultAudioService.h  NullAudioService.h  Sound.h  Stream.h
include/color/: Color.h
include/common/: Color.h  Exceptions.h  Vec.h  math.h  random.h  str.h  stringFns.h
include/components/: Collider.h  Component.h  Particle.h  ParticleEmitter.h  Physics.h  Sprite.h  Transform.h  components.h  ui.h
include/display/: Window.h
include/entities/: Entity.h  GameObject.h  ObjId.h  Particle.h  ParticleEmitter.h  Sprite.h
include/fonts/: Font.h
include/input/: Input.h  JoystickCodes.h  JoystickState.h  KeyboardState.h  MouseState.h
include/logging/: DebugLogger.h  Logger.h
include/particles/: Particle.h
include/primitives/: Primitives.h
include/random/: RandomGenerator.h
include/scene/: Scene.h  SceneManager.h
include/services/: EventQueue.h  Locator.h  Service.h  Services.h
include/settings/: SettingManager.h
include/systems/: CollisionSystem.h  ParticleSystem.h  PhysicsSystem.h  RenderSystem.h  UISystem.h
include/textures/: Texture.h
include/ui/: Button.h  Label.h  MessageBox.h  UIElement.h
lib/: afk-config.cmake  libs.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+77 more)
src/: Engine.cpp  EventQueue.cpp  Game.cpp  Locator.cpp
src/assets/: AssetManager.cpp  Font.cpp  Sound.cpp  Stream.cpp  Texture.cpp
src/audio/: DefaultAudioService.cpp  NullAudioService.cpp  Sound.cpp  Stream.cpp
src/color/: Color.cpp
src/common/: Color.cpp  Exceptions.cpp  math.cpp  random.cpp  str.cpp  stringFns.cpp
src/components/: Collider.cpp  Component.cpp  Sprite.cpp  Transform.cpp
src/display/: Window.cpp
src/entities/: GameObject.cpp  Particle.cpp  ParticleEmitter.cpp  Sprite.cpp
src/fonts/: Font.cpp
src/input/: Input.cpp
src/logging/: DebugLogger.cpp  Logger.cpp
src/particles/: Particle.cpp
src/primitives/: Primitives.cpp
src/random/: RandomGenerator.cpp
src/scene/: Scene.cpp  SceneManager.cpp
src/services/: EventQueue.cpp  (+2 more)
(+51 files in other folders)
