cmake_minimum_required(VERSION 3.11)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project (ex_screen)

# Add sources
file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

# Create lib
add_executable(${PROJECT_NAME} ${SOURCES})

# Add compile options
target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic)

# Find libs
find_library(ALLEGRO_LIBRARY NAMES liballegro REQUIRED)
find_library(ALLEGRO_ACODEC_LIBRARY NAMES liballegro_acodec REQUIRED)
find_library(ALLEGRO_AUDIO_LIBRARY NAMES liballegro_audio REQUIRED)
find_library(ALLEGRO_COLOR_LIBRARY NAMES liballegro_color REQUIRED)
find_library(ALLEGRO_DIALOG_LIBRARY NAMES liballegro_dialog REQUIRED)
find_library(ALLEGRO_FONT_LIBRARY NAMES liballegro_font REQUIRED)
find_library(ALLEGRO_IMAGE_LIBRARY NAMES liballegro_image REQUIRED)
find_library(ALLEGRO_MAIN_LIBRARY NAMES liballegro_main REQUIRED)
find_library(ALLEGRO_PRIMITIVES_LIBRARY NAMES liballegro_primitives REQUIRED)
find_library(ALLEGRO_TTF_LIBRARY NAMES liballegro_ttf REQUIRED)
find_library(AFK_LIBRARY NAMES libafk REQUIRED HINTS ${CMAKE_SOURCE_DIR}/../../)

# Link Libs
target_link_libraries(${PROJECT_NAME} ${ALLEGRO_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${ALLEGRO_ACODEC_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${ALLEGRO_AUDIO_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${ALLEGRO_COLOR_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${ALLEGRO_DIALOG_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${ALLEGRO_FONT_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${ALLEGRO_IMAGE_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${ALLEGRO_MAIN_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${ALLEGRO_PRIMITIVES_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${ALLEGRO_TTF_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${AFK_LIBRARY}) 